# pantanalise-API

./: .coverage  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
docker/developer/: Dockerfile
pantanalise/: main.py
pantanalise/model/: sentiment_analysis_repository.py
pantanalise/model_request/: message_model.py
pantanalise/repository/: predict.py
pantanalise/repository/bentoml/: engage_predict_bentoml_repository.py  word_predict_bentoml_repository.py
pantanalise/repository/model/: engage_predict_direct_repository.py  lia_bert_classifier.py  sentiment_analysis_predict_direct_repository.py  test.py  word_predict_direct_repository.py
production/: docker-compose.yaml
tests/: test_example.py
tests/api/: test_engage_predict_endpoint.py  test_health_check_endpoint.py  test_sentiment_analysis_endpoint.py  test_word_predict_endpoint.py
tests/repository/: test_engage_predict_bentoml_repository_.py  test_engate_predict_direct_respository.py  test_sentiment_analysis_direct_repository.py  test_word_predict_bentoml_repository.py  test_word_predict_direct_repository.py
