[tool.poetry]
name = "pantanalise"
version = "0.1.0"
description = ""
authors = ["Vinicius <vinnyaoem@gmail.com>"]
readme = "README.md"
packages = [{include = "pantanalise"}]

[tool.poetry.dependencies]
python = "^3.8.5"
uvicorn = "0.18.3"
fastapi = "0.83.0"
python-dotenv = "0.21.1"
pytest = "7.3.1"
pytest-cov = "4.0.0"
anyio = "3.6.2"
black = "22.12.0"
click = "8.1.3"
cmake = "3.26.3"
coverage = "7.2.5"
exceptiongroup = "1.1.1"
filelock = "3.12.0"
h11 = "0.14.0"
idna = "3.4"
iniconfig = "2.0.0"
isort = "5.12.0"
jinja2 = "3.1.2"
lit = "16.0.2"
markupsafe = "2.1.2"
mpmath = "1.3.0"
mypy-extensions = "1.0.0"
networkx = "3.1"
nvidia-cublas-cu11 = "11.10.3.66"
nvidia-cuda-cupti-cu11 = "11.7.101"
nvidia-cuda-nvrtc-cu11 = "11.7.99"
nvidia-cuda-runtime-cu11 = "11.7.99"
nvidia-cudnn-cu11 = "8.5.0.96"
nvidia-cufft-cu11 = "10.9.0.58"
nvidia-curand-cu11 = "10.2.10.91"
nvidia-cusolver-cu11 = "11.4.0.1"
nvidia-cusparse-cu11 = "11.7.4.91"
nvidia-nccl-cu11 = "2.14.3"
nvidia-nvtx-cu11 = "11.7.91"
packaging = "23.1"
pathspec = "0.11.1"
platformdirs = "3.5.0"
pluggy = "1.0.0"
pydantic = "1.10.7"
sniffio = "1.3.0"
starlette = "0.19.1"
sympy = "1.11.1"
tomli = "2.0.1"
torch = "2.0.0"
triton = "2.0.0"
typing-extensions = "4.5.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"